[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"
description = "Advent of Code 2023 solutions"
repository = "https://github.com/dorranh/aoc-2023"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.10", features = ["derive"]}
